# cpp-snippets

./: -  CMakeLists.txt  CMakePresets.json  compose.yml  mise.toml
fibonacci/: mise.toml
fibonacci/src/: main.c  main.cpp
http/src/: Dockerfile  server.cpp
snippets/: CMakeLists.txt
snippets/algorithm/: CMakeLists.txt  fibonacci.cpp  sorting.cpp
snippets/basic_types/: CMakeLists.txt  arrays.cpp  move.cpp  strings.cpp  struct.cpp  vectors.cpp
snippets/data_types/: CMakeLists.txt  auto.cpp
snippets/files/: CMakeLists.txt  files.cpp
snippets/miscellaneous/: calc.cpp
snippets/networks/: CMakeLists.txt  poll.cpp  select.cpp  server.cpp
snippets/parallel/: CMakeLists.txt  async_pools.cpp
snippets/utilities/: CMakeLists.txt  regex.cpp
