#######################################################
### Modern C++ / Snippets and examples              ###
#######################################################
# Project information
cmake_minimum_required(VERSION 3.14)
project(cpp-snippets
    VERSION 1.0.0
    DESCRIPTION "C++ Snippets"
    HOMEPAGE_URL "https://github.com/reftch"
)
set(CMAKE_CXX_STANDARD 20)
add_subdirectory(snippets)
